syntax = "proto3";
package decimal.validator.v1;

import "gogoproto/gogo.proto";
import "google/protobuf/duration.proto";

option go_package = "bitbucket.org/decimalteam/go-smart-node/x/validator/types";

// Params defines the parameters for the module.
message Params {
  option (gogoproto.equal) = true;
  option (gogoproto.goproto_getters) = false;
  option (gogoproto.goproto_stringer) = true;

  // max_validators defines the maximum number of validators can be bounded at the same time.
  uint32 max_validators = 1;
  // max_delegations defines the maximum number of delegations per validator at be bounded at the same time.
  uint32 max_delegations = 2;
  // max_entries defines the max entries for single undelegation/redelegation (per pair/trio).
  uint32 max_entries = 3;
  // historical_entries defines the number of historical entries to persist.
  uint32 historical_entries = 4;
  // redelegation_time defines the time duration of redelegation a stake (moving to the other validator).
  google.protobuf.Duration redelegation_time = 5 [ (gogoproto.nullable) = false, (gogoproto.stdduration) = true ];
  // undelegation_time defines the time duration of undelegation a stake (unbonding from the validator).
  google.protobuf.Duration undelegation_time = 6 [ (gogoproto.nullable) = false, (gogoproto.stdduration) = true ];
  // base_denom is base denom on the basis of which power is calculated
  string base_denom = 7;
  // slashing parameters
  
  // width of sliding window for downtime slashing
  int64 signed_blocks_window  = 10;
  // minimum blocks signed per window
  bytes min_signed_per_window = 11
      [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", (gogoproto.nullable) = false];
  // downtime jail duration
  google.protobuf.Duration downtime_jail_duration = 12 [(gogoproto.nullable) = false, (gogoproto.stdduration) = true];
  // fraction of power slashed in case of double sign
  bytes                    slash_fraction_double_sign = 13
      [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", (gogoproto.nullable) = false];
  // fraction of power slashed for downtime
  bytes slash_fraction_downtime = 14
      [(gogoproto.customtype) = "github.com/cosmos/cosmos-sdk/types.Dec", (gogoproto.nullable) = false];

}
